--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
     "mongoose": "^5.0.11",
     "underscore": "^1.8.3"
   }
