--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.2.2",
     "mongoose": "^5.0.11",
+    "njwt": "^0.4.0",
     "underscore": "^1.8.3"
   }
 }
