--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "description": "Restful webservice voor Maat-it",
   "main": "index.js",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "mocha": "^2.4.5"
+  },
   "scripts": {
-    "start": "node index.js"
+    "start": "SET NODE_ENV=dev && node index.js",
+    "test": "mocha --timeout 10000"
   },
   "author": "",
   "license": "ISC",
